upload of the form

--- a/html assignment/html-form.html
+++ b/html assignment/html-form.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML FORMS</title>
+    <link rel="stylesheet" href="/stylesheet.css">
   </head>
   <body>
     <h3>Created form</h3>
@@ -12,15 +13,15 @@
 
     <form action="">
         <div class="names">
-            <label for="fname">First name:</label>
+            <label for="fname">First name:</label><br>
             <input type="text" id="fname" name="fname" placeholder="John"  maxlength="30" minlength="5" /><br />
-            <label for="lname">Last name:</label>
+            <label for="lname">Last name:</label><br>
             <input type="text" id="lname" name="lname" placeholder="Doe" maxlength="30" minlength="5"  /><br />
 
         </div>
         
         <div class="biography">
-            <label for="biography">Give some info about yourself</label>
+            <label for="biography">Provide a brief bio about yourself</label><br>
             <textarea name="description" id="biography" cols="30" rows="5"></textarea><br>
 
         </div>
